# Procguard

./: .dockerignore  .env  .env.example  .gitignore  .vercelignore  ARCH_BACKEND_SYNC.md  AUDIT_INCIDENT_EXECUTIVE_SUMMARY.md  AUTHORIZATION_AUDIT_FINAL.md  BOARDSGRID_AUDIT.md  COMPLIANCE_INCIDENT_REPORT_2026_001.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.backend  IMAGINE_CUP_DEMO_SCRIPT.md  JUDGE_DEFENSE_SHEET.md  JUDGE_INTEGRATION_AUDIT.md  Makefile  QUICKSTART.md  README.md  REMEDIATION_VIOLATION_IMMUTABILITY.md  SUBMISSION_DEFENSE.md  TROUBLESHOOTING.md  VERCEL_DEPLOY.md  VERCEL_SETUP_SUMMARY.md  alembic.ini  app.yaml  apply_db_index.py  batch_id.txt  check_db.py  debug_db.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_data.py  next.config.ts  (+10 more)
alembic/: env.py
api/: index.py
app/: main.py  schemas.py
docs/: API_CONTRACT.md  CERTIFICATION_LOG.md  CONTRACT_VALIDATION.md  FINAL_INTEGRATION_AUDIT.md  FINAL_SLIDE_WORDING.md  IMAGINE_CUP_CERTIFICATION.md  IMAGINE_CUP_DEMO_SCRIPT.md  INTEGRATION_DOSSIER.md  JUDGE_DEFENSE_SLIDE.md  JUDGE_EXPLANATION_SCRIPT.md  JUDGE_VERIFICATION_REPORT.md
infra/: container.bicep  main.bicep  postgres.bicep  storage.bicep
procguard-ui/: .dockerignore  next.config.ts
procguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_app_importable.sh  demo_flow_verification.py  ensure_tables.py  fix_db_models.py  manual_transition.py  seed_data.py  seed_opa_logs.py  seed_sops.py  test_cors.py  test_pdf.py  (+1 more)
(+179 files in other folders)
